clusters/san-jose/apps/littlelinks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: littlelinks
  namespace: apps
  annotations:
    # set ingress controller
    ingressClassName: "traefik"
    # default settings for traefik
    traefik.ingress.kubernetes.io/router.middlewares: "routes-default-header@kubernetescrd"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    # sticky session for traefik
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "cookies"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
  labels:
    group: website 
spec:
  defaultBackend:
    service:
      name: conlon-links-svc
      port:
        name: web
  rules:
  - host: allen.conlon.dev
    http:
      paths:
      - backend:
          service:
            name: conlon-links-svc
            port:
              name: web
        path: /
        pathType: Prefix
  tls:
  - secretName: tls-cert-conlon-dev
